fixed zoom on mobile

--- a/src/components/UI/Styles.module.css
+++ b/src/components/UI/Styles.module.css
@@ -158,7 +158,4 @@
 }
 
 @media (max-width: 450px) {
-  .todo-item:hover > div .collapsed {
-    display: block !important;
-  }
 }
